# sage-stubs

./: .gitignore  .gitmodules  AGENTS.md  PROGRESS.md  PROGRESS_REPORT.md  README.md  STUBS_PROGRESS.md  STUB_GAPS.md  WORKSTREAM.md  justfile  pyproject.toml
.agents/: feature.md  plan.md
.agents/phases/: phase-01-exempt.md  phase-01-foundation.md  phase-02-core-rings.md  phase-03-polynomial-rings.md  phase-04-number-theory-rings.md  phase-05-linear-algebra.md  phase-06-algebras-core.md  phase-07-lie-quantum.md  phase-08-groups.md  phase-09-combinat-leaves.md  phase-10-combinat-sf-roots.md  phase-11-combinat-crystals-posets.md  phase-12-geometry.md  phase-13-schemes-dynamics.md  phase-14-modular.md  phase-15-topology-manifolds-graphs.md  phase-16-symbolic.md  phase-17-applied-domains.md  phase-18-infrastructure.md
.antigravitycli/: 9ef5853a-1b6b-4ac5-a25d-6734da728466.json
.githooks/: commit-msg  post-commit  pre-commit
.qoder/: settings.local.json
.serena/memories/: preserve_type_surface_and_forward_progress.md
sage-stubs/algebras/: algebra.pyi  clifford_algebra.pyi  exterior_algebra.pyi  free_algebra.pyi  free_algebra_element.pyi  group_algebra.pyi  iwahori_hecke_algebra.pyi
sage-stubs/arith/: functions.pyi  misc.pyi  multi_modular.pyi  numerical_approx.pyi  power.pyi  rational_reconstruction.pyi  srange.pyi
sage-stubs/categories/: action.pyi  additive_groups.pyi  additive_magmas.pyi  additive_monoids.pyi  additive_semigroups.pyi  affine_weyl_groups.pyi  algebra_functor.pyi  algebras.pyi  algebras_with_basis.pyi  algebras_with_several_realizations.pyi  associative_algebras.pyi  bialgebras.pyi  bimodules.pyi  cartesian_product.pyi  category.pyi  category_singleton.pyi  category_types.pyi  category_with_axiom.pyi  chain_complexes.pyi  classical_crystals.pyi  coalgebras.pyi  coalgebras_with_basis.pyi  commutative_additive_groups.pyi  commutative_additive_monoids.pyi  commutative_additive_semigroups.pyi  commutative_algebras.pyi  commutative_ring_ideals.pyi  commutative_rings.pyi  complete_discrete_valuation.pyi  complex_reflection_groups.pyi  covariant_functorial_construction.pyi  coxeter_groups.pyi  crystals.pyi  cw_complexes.pyi  dedekind_domains.pyi  discrete_valuation.pyi  distributive_magmas_and_additive_magmas.pyi  division_rings.pyi  domains.pyi  drinfeld_modules.pyi  (+108 more)
sage-stubs/coding/: __init__.pyi  decoder.pyi  encoder.pyi  linear_code.pyi
sage-stubs/combinat/: __init__.pyi  abstract_tree.pyi  alternating_sign_matrix.pyi  backtrack.pyi  binary_tree.pyi  colored_permutations.pyi  combinat.pyi  combination.pyi  composition.pyi  core.pyi  diagram.pyi  dyck_word.pyi  free_module.pyi  gelfand_tsetlin_patterns.pyi  integer_vector.pyi  ordered_tree.pyi  partition.pyi  partition_tuple.pyi  permutation.pyi  plane_partition.pyi  ribbon_tableau.pyi  rooted_tree.pyi  set_partition.pyi  skew_partition.pyi  skew_tableau.pyi  subset.pyi  tableau.pyi
sage-stubs/cpython/: atexit.pyi  builtin_types.pyi  debug.pyi  getattr.pyi  string.pyi  type.pyi
sage-stubs/data_structures/: bitset.pyi  blas_dict.pyi  bounded_integer_sequences.pyi  list_of_pairs.pyi  mutable_poset.pyi  stream.pyi
sage-stubs/geometry/: abc.pyi  convex_set.pyi  fan.pyi
sage-stubs/graphs/: bipartite_graph.pyi  convexity_properties.pyi  digraph.pyi  generic_graph.pyi  graph.pyi  graph_generators.pyi
sage-stubs/groups/: class_function.pyi  conjugacy_classes.pyi  finitely_presented.pyi  free_group.pyi  galois_group.pyi  generic.pyi  group.pyi  libgap_mixin.pyi  libgap_wrapper.pyi  symmetric_group_algebra.pyi
sage-stubs/interfaces/: abc.pyi  expect.pyi  gp.pyi  interface.pyi  tab_completion.pyi
sage-stubs/lfunctions/: dokchitser.pyi  lcalc.pyi  pari.pyi  zero_sums.pyi
sage-stubs/manifolds/: calculus_method.pyi  chart.pyi  chart_func.pyi  continuous_map.pyi  continuous_map_image.pyi  manifold.pyi  manifold_homset.pyi  point.pyi  scalarfield.pyi  scalarfield_algebra.pyi  structure.pyi  subset.pyi  vector_bundle.pyi
sage-stubs/matrix/: args.pyi  berlekamp_massey.pyi  constructor.pyi  matrix.pyi  matrix0.pyi  matrix1.pyi  matrix2.pyi  matrix_dense.pyi  matrix_generic_dense.pyi  matrix_integer_dense.pyi  matrix_misc.pyi  matrix_modn_dense_float.pyi  matrix_rational_dense.pyi  matrix_space.pyi
sage-stubs/misc/: abstract_method.pyi  binary_tree.pyi  bindable_class.pyi  c3.pyi  c3_controlled.pyi  cachefunc.pyi  call.pyi  callable_dict.pyi  classcall_metaclass.pyi  (+71 more)
sage_stubs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_guardrails.py  check_stubs.py  pre-commit  stub_annotation_policy.py  stub_coverage.py  type_surface_review.py
(+389 files in other folders)
