[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-stubs"
version = "10.7.0"
description = "PEP 561 stub-only package for Sage 10.7 category/structure interfaces"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools]
packages = [
    "sage-stubs",
    "sage-stubs.categories",
    "sage-stubs.structure",
    "sage-stubs.misc",
    "sage-stubs.sets",
    "sage-stubs.matrix",
    "sage-stubs.rings",
    "sage-stubs.rings.number_field",
    "sage-stubs.rings.padics",
    "sage-stubs.rings.polynomial",
    "sage-stubs.combinat",
    "sage-stubs.combinat.posets",
]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# ANN: missing annotations
# UP006/UP007/UP035: deprecated typing patterns (Optional, Union, old-style imports)
# PYI: stub-specific rules (flake8-pyi)
select = ["ANN", "UP006", "UP007", "UP035", "PYI"]
ignore = [
    "ANN101",  # self annotation not required
    "ANN102",  # cls annotation not required
    "ANN401",  # Any allowed — our bespoke checker enforces a stricter ban
]

[tool.mypy]
strict = true
files = ["sage-stubs"]
