[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-stubs"
version = "10.7.0"
description = "PEP 561 stub-only package for Sage 10.7 category/structure interfaces"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools]
packages = [
    "sage-stubs",
    "sage-stubs.algebras",
    "sage-stubs.algebras.quatalg",
    "sage-stubs.categories",
    "sage-stubs.coding",
    "sage-stubs.combinat",
    "sage-stubs.combinat.crystals",
    "sage-stubs.combinat.designs",
    "sage-stubs.combinat.integer_lists",
    "sage-stubs.combinat.ncsf_qsym",
    "sage-stubs.combinat.posets",
    "sage-stubs.combinat.root_system",
    "sage-stubs.combinat.sf",
    "sage-stubs.combinat.species",
    "sage-stubs.combinat.words",
    "sage-stubs.geometry.polyhedron",
    "sage-stubs.graphs",
    "sage-stubs.groups",
    "sage-stubs.groups.abelian_gps",
    "sage-stubs.groups.additive_abelian",
    "sage-stubs.groups.matrix_gps",
    "sage-stubs.groups.perm_gps",
    "sage-stubs.lfunctions",
    "sage-stubs.manifolds",
    "sage-stubs.matrix",
    "sage-stubs.misc",
    "sage-stubs.modular",
    "sage-stubs.modular.abvar",
    "sage-stubs.modular.btquotients",
    "sage-stubs.modular.hecke",
    "sage-stubs.modular.modsym",
    "sage-stubs.modules",
    "sage-stubs.modules.fg_pid",
    "sage-stubs.modules.with_basis",
    "sage-stubs.quadratic_forms",
    "sage-stubs.rings",
    "sage-stubs.rings.asymptotic",
    "sage-stubs.rings.finite_rings",
    "sage-stubs.rings.function_field",
    "sage-stubs.rings.number_field",
    "sage-stubs.rings.padics",
    "sage-stubs.rings.polynomial",
    "sage-stubs.rings.valuation",
    "sage-stubs.schemes",
    "sage-stubs.schemes.affine",
    "sage-stubs.schemes.projective",
    "sage-stubs.sets",
    "sage-stubs.structure",
    "sage-stubs.topology",
]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# ANN: missing annotations
# UP006/UP007/UP035: deprecated typing patterns (Optional, Union, old-style imports)
# PYI: stub-specific rules (flake8-pyi)
select = ["ANN", "UP006", "UP007", "UP035", "PYI"]
ignore = [
    "ANN101",  # self annotation not required
    "ANN102",  # cls annotation not required
    "ANN401",  # Any allowed — our bespoke checker enforces a stricter ban
]

[tool.mypy]
strict = true
files = ["sage-stubs"]
